--- a/Source/Tests/Integration-tests/Integration-tests.csproj
+++ b/Source/Tests/Integration-tests/Integration-tests.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="Build\Build.props" />
 	<PropertyGroup>
+		<RootNamespace>IntegrationTests</RootNamespace>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.10" />
 	</ItemGroup>
-	<Import Project="Build\Build.targets" />
 </Project>
