--- a/Source/Tests/Unit-tests/Unit-tests.csproj
+++ b/Source/Tests/Unit-tests/Unit-tests.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="Build\Build.props" />
 	<PropertyGroup>
+		<RootNamespace>UnitTests</RootNamespace>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
-	<Import Project="Build\Build.targets" />
 </Project>
