--- a/Source/Project/Project.csproj
+++ b/Source/Project/Project.csproj
@@ -24,7 +24,9 @@
 		<PackageTags></PackageTags>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
 	</ItemGroup>
 	<Target Name="HandleAssemblyOriginatorKeyFile" BeforeTargets="BeforeBuild" Condition="$(SignAssembly) AND !Exists('$(AssemblyOriginatorKeyFile)')">
 		<PropertyGroup>
