--- a/Source/Tests/Integration-tests/Integration-tests.csproj
+++ b/Source/Tests/Integration-tests/Integration-tests.csproj
@@ -1,9 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<RootNamespace>IntegrationTests</RootNamespace>
+		<RunSettingsFilePath>$(MSBuildProjectDirectory)\.runsettings</RunSettingsFilePath>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.10" />
 	</ItemGroup>
+
+
+	<Target Name="Yeah" BeforeTargets="BeforeBuild">
+		<Message Importance="high" Text="MSBuildProjectDirectory: $(MSBuildProjectDirectory)" />
+	</Target>
 </Project>
