--- a/Source/Project/.editorconfig
+++ b/Source/Project/.editorconfig
@@ -3,3 +3,5 @@
 #dotnet_diagnostic.CA1056.severity = none
 #dotnet_diagnostic.CA1303.severity = none
 #dotnet_diagnostic.CA2007.severity = none
+dotnet_diagnostic.IDE0078.severity = none
+dotnet_diagnostic.IDE0083.severity = none
