--- a/Tests/Directory.Build.targets
+++ b/Tests/Directory.Build.targets
@@ -6,6 +6,6 @@
 		<PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="../../Project\Project.csproj" />
+		<ProjectReference Include="../../Source/Project/Project.csproj" />
 	</ItemGroup>
 </Project>
