--- a/Tests/Directory.Build.targets
+++ b/Tests/Directory.Build.targets
@@ -6,6 +6,7 @@
 		<PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="../Test-helpers/Test-helpers.csproj" />
 		<ProjectReference Include="../../Source/Project/Project.csproj" />
 	</ItemGroup>
 </Project>
