--- a/Tests/Integration-tests/Integration-tests.csproj
+++ b/Tests/Integration-tests/Integration-tests.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<RootNamespace>IntegrationTests</RootNamespace>
 		<RunSettingsFilePath>$(MSBuildProjectDirectory)/.runsettings</RunSettingsFilePath>
-		<TargetFrameworks>net6.0;net5.0;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net462;net5.0;net6.0;netcoreapp3.1</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
